# metal-kernels

./: CMakeLists.txt  README.md  main.cpp  softmax.metal  vector_add.metal  verify_softmax.cpp  verify_softmax.h  verify_vector_add.cpp  verify_vector_add.h
